# polishingrobot_viewpointplanner

./: CMakeLists.txt  package.xml  readme.md
launch/: viewpoint_planning_no_octomap.launch  viewpoint_planning_with_modifiedoctomap.launch  viewpoint_planning_with_octomapserver.launch
mesh/: 20200716_scan_planning.stl  20200716_scan_planning_1.stl
script/: aubo_kienamatics.py  cartesianspace_viewpoints_generation.m  data.mat  effective_cartersianspace_viewpoints_visualization.m  jointspace_viewpoints_computation.py  test.py
script/grid_based_coverage/: jointspace_viewpoints_computation.py
script/octomap_based_coverage/: polishingrobot_moveit.py
src/: aubo_collisition_bk.py  moveit_collision_check_v2.cpp  octomap_viewpoint_planning.cpp  planning_scene.cpp  publish_octomap.cpp  publish_pointcloud.cpp  test_pcd.bt  test_pcd.pcd  test_pcd1.bt  viewpoint_planning_using_octomap.cpp  viewpoints_planning_matlab.m
